--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: lightpink;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -14,8 +14,6 @@
 }
 
 .square {
-  width: 350px;
-  height: 350px;
   background-color: white;
   margin-bottom: 50px;
 }
